Fixes AdminThemeUikit - Image fields size information overlaps download icon
https://github.com/rolandtoth/AdminOnSteroids/issues/63

--- a/src/aos.scss
+++ b/src/aos.scss
@@ -3410,9 +3410,6 @@ html.moveAssetButtons {
 }
 
 .aos_downloadAsset {
-  position: absolute;
-  z-index: 99;
-  //top: 1px;
   .gridImage--delete &,
   .InputfieldImageEdit__buttons & {
     display: none;
